--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,57 +1,82 @@
-<!-- Bannière défilante -->
+<!-- Bannière -->
 <section class="Banner">
   <div class="header-image" *ngIf="currentImageUrl">
-    <img [src]="currentImageUrl" alt="Bannière défilante" />
+    <img class="banner" [src]="currentImageUrl" alt="Bannière" />
+    <img class="titre-header" src="assets/TitreHeader.png" alt="Titre de la bannière" />
   </div>
 </section>
 
 <div class="gallery-container">
-
   <!-- Filtres -->
   <div class="filters">
-    <select [(ngModel)]="filter.category" (change)="onFilter()">
-      <option value="">Toutes les catégories</option>
-      <option *ngFor="let category of categories" [value]="category">{{ category }}</option>
-    </select>
+    <div class="filters_left">
+      
+      <!-- Menu déroulant pour les catégories -->
+      <div class="dropdown">
+        <button class="dropdown-btn" (click)="toggleDropdown('categoryDropdown')">
+          {{ filter.category || 'catégories' }}
+          <span class="arrow">&#9662;</span>
+        </button>
+        <div>
+        <ul *ngIf="dropdowns['categoryDropdown']" class="dropdown-menu">
+          <li (click)="setFilter('category', '')"></li>
+          <li *ngFor="let category of categories" (click)="setFilter('category', category)">
+            {{ category }}
+          </li>
+        </ul>
+      </div>
+      </div>
 
-    <select [(ngModel)]="filter.format" (change)="onFilter()">
-      <option value="">Tous les formats</option>
-      <option *ngFor="let format of formats" [value]="format">{{ format }}</option>
-    </select>
+      <!-- Menu déroulant pour les formats -->
+      <div class="dropdown">
+        <button class="dropdown-btn" (click)="toggleDropdown('formatDropdown')">
+          {{ filter.format || 'formats' }}
+          <span class="arrow">&#9662;</span>
+        </button>
+        <ul *ngIf="dropdowns['formatDropdown']" class="dropdown-menu">
+          <li (click)="setFilter('format', '')"></li>
+          <li *ngFor="let format of formats" (click)="setFilter('format', format)">
+            {{ format }}
+          </li>
+        </ul>
+      </div>
+    </div>
 
-    <select [(ngModel)]="filter.order" (change)="onFilter()">
-      <option value="">Aucun ordre</option>
-      <option value="asc">Ordre croissant</option>
-      <option value="desc">Ordre décroissant</option>
-    </select>
+      <!-- Menu déroulant pour l'ordre -->
+      <div class="dropdown">
+        <button class="dropdown-btn" (click)="toggleDropdown('orderDropdown')">
+          {{ filter.order || 'trier par' }}
+          <span class="arrow">&#9662;</span>
+        </button>
+        <ul *ngIf="dropdowns['orderDropdown']" class="dropdown-menu">
+          <li (click)="setFilter('order', '')"></li>
+          <li (click)="setFilter('order', 'asc')">à partir des plus anciènnes</li>
+          <li (click)="setFilter('order', 'desc')">à partir des plus réscentes</li>
+        </ul>
+      </div>
+
   </div>
 
-  <!-- Lightbox -->
-  <div class="lightbox" *ngIf="lightboxVisible">
-    <div class="lightbox-content">
-      <img [src]="lightboxImageUrl" alt="Image en plein écran" />
-      <span class="text title">{{ lightboxTitle }}</span>
-      <span class="text category">{{ lightboxCategory }}</span>
-      <span class="material-icons close" (click)="closeLightbox()">close</span>
+  <div class="gallery">
+    <div *ngFor="let image of displayedImages" class="gallery-item">
+      <img [src]="image.file" [alt]="image.title" />
+      <div class="overlay">
+        <span class="icon fullscreen material-icons" (click)="openLightbox(image.file, image.title, image.category)">
+          fullscreen
+        </span>
+        <span class="icon visibility material-icons">
+          visibility
+        </span>
+        <span class="text title">{{ image.title }}</span>
+        <span class="text category">{{ image.category }}</span>
+      </div>
     </div>
   </div>
-
-
-  <!-- Galerie d'images -->
-   <div class="gallery">
-  <div *ngFor="let image of filteredImages" class="gallery-item">
-    <img [src]="image.file" [alt]="image.title" />
-    <div class="overlay">
-      <span class="icon fullscreen material-icons" (click)="openLightbox(image.file, image.title, image.category)">
-        fullscreen
-      </span>
-      <span class="icon visibility material-icons">
-        visibility
-      </span>
-      <span class="text title">{{ image.title }}</span>
-      <span class="text category">{{ image.category }}</span>
-    </div>
+  
+  <!-- Bouton "Charger plus" -->
+  <div class="load-more" *ngIf="totalImagesShown < filteredImages.length">
+    <button (click)="loadMore()">Charger plus</button>
   </div>
 </div>
 
-</div>
+    
