--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -19,16 +19,30 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
-    position: relative;
     top: 0;
     left: 0;
     transition: opacity 1s ease-in-out;
 
-    img {
+    .banner {
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
+  }
+
+  .titre-header {
+    z-index: 200;
+    position: absolute;
+    /* Positionnement absolu pour se superposer */
+    top: 50%;
+    /* Centrer verticalement */
+    left: 50%;
+    /* Centrer horizontalement */
+    transform: translate(-50%, -50%);
+    /* Ajuste le décalage pour centrer précisément */
+    width: 75%;
+    /* Taille personnalisée de l'image superposée */
+    object-fit: contain;
   }
 }
 
@@ -52,7 +66,7 @@
   }
 
   .title {
-    left:10px;
+    left: 10px;
   }
 
   .category {
@@ -101,14 +115,72 @@
   flex-direction: column;
   align-items: center;
 
-  .filters {
-    margin-bottom: 20px;
+  .load-more {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px auto;
+    width: 50%;
+    height: 100px;
 
-    select {
-      margin: 0 10px;
-      padding: 5px 10px;
-      font-size: 16px;
+    button{
+      width: 35%;
+    height: 50px;
+    background-color: #D8D8D8;
+    border: none;
+    text-transform: none;
+    cursor: pointer;
     }
+  }
+
+  .filters {
+    margin: 20px;
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+
+    .dropdown {
+      width: calc(40% - 20px);
+
+      button {
+        width: 100%;
+        border-radius: 5px;
+      }
+    }
+
+    ul {
+
+      z-index: 100;
+      position: absolute;
+      background-color: white;
+      border: 1px solid black;
+      margin: 0;
+      padding: 0;
+      width: calc(18% - 20px);
+
+
+      li {
+        list-style-type: none;
+
+
+      }
+    }
+
+    .filters_left {
+      display: flex;
+      justify-content: space-between;
+      width: 50%;
+
+    }
+
+    .dropdown-btn {
+      background-color: white;
+      height: auto;
+      text-transform: none;
+      cursor: pointer;
+      border: 1px solid black;
+    }
+
   }
 
   .gallery {
@@ -119,6 +191,8 @@
     align-items: center;
     width: 90%;
     margin: 0 auto;
+
+    
 
     .gallery-item {
       flex: 0 1 calc(50% - 20px);
@@ -133,7 +207,7 @@
         height: 100%;
         object-fit: cover;
         object-position: center;
-        
+
       }
 
       .overlay {
