--- a/src/app/photo-detail/photo-detail.component.html
+++ b/src/app/photo-detail/photo-detail.component.html
@@ -28,7 +28,7 @@
         <div class="interest">
           <p class="photo-interest">Cette photo vous intéresse ?</p>
           <div class="contact-link">
-            <a href="#" class="btn_contact2" (click)="openPopup()">Contact</a>
+            <!-- <a href="#" class="btn_contact2" ">Contact</a> -->
           </div>
         </div>
       </div>
