mise en place footer

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,6 +13,7 @@
     </nav> 
 </header>
 
+<!-- popup contact-->
 <div class="popup-overlay" *ngIf="isVisible" (click)="closeModal($event)">
     <div class="popup-salon" (click)="$event.stopPropagation()">
       <div class="popup-header">
