--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,44 +1,54 @@
 <header>
-    <div class="logo-container">
-        <a routerLink="">
-            <img src="/assets/NathalieMota.png" alt="logo du site Nathalie ecrit en rouge">
-        </a>
-    </div>
-    <nav class="header_nav">
-        <ul>
-            <li><a routerLink="">Acceuil</a></li>
-            <li><a routerLink="#">à propos</a></li>
-            <li><a routerLink="popup-modal">contact</a></li>
-        </ul>
-    </nav> 
+  <div class="logo-container">
+    <a routerLink="">
+      <img src="/assets/NathalieMota.png" alt="logo du site Nathalie ecrit en rouge" />
+    </a>
+  </div>
+  <nav class="header_nav">
+    <ul>
+      <li><a routerLink="">Accueil</a></li>
+      <li><a href="#">À propos</a></li>
+      <li><a (click)="openModal()">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 
-<!-- popup contact-->
-<div class="popup-overlay" *ngIf="isVisible" (click)="closeModal($event)">
-    <div class="popup-salon" (click)="$event.stopPropagation()">
-      <div class="popup-header">
-        <!-- Image statique pour la modale -->
-        <img src="assets/contact-header.jpg" alt="Contact Header" class="popup-image" />
-      </div>
-      <div class="popup-content">
-        <form (ngSubmit)="submitForm()">
+
+<!-- popup contact -->
+<div class="popup-overlay" *ngIf="isModalVisible" (click)="closeModal()">
+  <div class="popup-salon" (click)="$event.stopPropagation()">
+    <div class="popup-header">
+      <img src="/assets/Contact-header.png" alt="Contact Header" class="popup-image" />
+    </div>
+    <div class="popup-content">
+      <form (ngSubmit)="submitForm()">
+        <article>
+          <div>
+            <label for="name">Nom :</label>
+            <input type="text" name="name" />
+          </div>
+
+          <div>
+            <label for="E-mail">e-mail :</label>
+            <input type="text" name="e-mail" />
+          </div>
+
           <div>
             <label for="reference">Référence :</label>
-            <input
-              id="reference"
-              type="text"
-              [(ngModel)]="reference"
-              name="reference"
-              readonly
-            />
+            <input id="reference" type="text" [(ngModel)]="reference" name="reference" readonly />
           </div>
           <div>
             <label for="message">Message :</label>
             <textarea id="message" [(ngModel)]="message" name="message"></textarea>
           </div>
-          <button type="submit">Envoyer</button>
-        </form>
-      </div>
-      <button class="close-btn" (click)="closeModal()">X</button>
+        </article>
+
+        <div class="submit">
+        <button type="submit" >Envoyer</button>
+        </div>
+
+      </form>
     </div>
+    <button class="close-btn" (click)="closeModal()">X</button>
   </div>
+</div>
