--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -12,88 +12,140 @@ header {
   box-shadow: 0px 14px 14px rgba(0, 0, 0, 0.03);
 
   .logo-container {
-      min-width: 200px;
-      max-width: 30%;
-      height: 80px;
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      margin-left: 5%;
-      margin-right: -5%;
-      flex: 1;
+    min-width: 200px;
+    max-width: 30%;
+    height: 80px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 5%;
+    margin-right: -5%;
+    flex: 1;
   }
 
   .header_nav {
-      display: flex;
+    display: flex;
+    justify-content: flex-end;
+    max-width: 60%;
+
+
+    ul {
       justify-content: flex-end;
-      max-width: 60%;
-      
+      height: 100%;
+      display: flex;
+      align-items: center;
+      list-style: none;
+      margin: 0;
 
-      ul {
-          justify-content: flex-end;
-          height: 100%;
-          display: flex;
-          align-items: center;
-          list-style: none;
-          margin: 0;
-
-          li{
-            margin: 0 30px;
-          }
-          
-
-          a{
-            text-decoration: none;
-            font-size: 21px;
-            text-transform: uppercase;
-            color: black;
-          }
-
-          a:hover{
-            color: darkgray;
-          }
+      li {
+        margin: 0 30px;
       }
+
+
+      a {
+        text-decoration: none;
+        font-size: 21px;
+        text-transform: uppercase;
+        color: black;
+      }
+
+      a:hover {
+        color: darkgray;
+      }
+    }
   }
 }
 
 .popup-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup-salon {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 500px;
+  width: 100%;
+  position: relative;
+}
+
+.popup-header img {
+  max-width: 100%;
+  border-radius: 8px;
+}
+
+.popup-content {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+
+  div {
+    display: flex;
+    flex-direction: column;
+
+    label {
+      display: block;
+      margin: 20px 0;
+      line-height: 20px;
+      font-size: 14px;
+      font-weight: 500;
+    }
+
+    input {
+      line-height: 20px;
+      font-size: 14px;
+      height: 40px;
+      width: 100%;
+      min-width: 100px;
+      max-width: 362.734px;
+      margin-top: 10px;
+    }
+
+    textarea{
+      height: 80px;
+    }
+  }
+
+  .submit {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
-  }
-  
-  .popup-salon {
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    max-width: 500px;
+    margin: 50px 0;
     width: 100%;
-    position: relative;
+    height: 100px;
+
+
+    button {
+      width: 100%;
+      height: 50px;
+      background-color: #D8D8D8;
+      border: none;
+      text-transform: none;
+      cursor: pointer;
+
+      &:hover{
+        background-color: black;
+        color: white;
+      }
+    }
   }
-  
-  .popup-header img {
-    max-width: 100%;
-    border-radius: 8px;
-  }
-  
-  .popup-content {
-    margin-top: 20px;
-  }
-  
-  .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: transparent;
-    border: none;
-    font-size: 20px;
-    cursor: pointer;
-  }
-  
+}
+
+.close-btn {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  background: transparent;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
