--- a/src/app/photo-detail/photo-detail.component.scss
+++ b/src/app/photo-detail/photo-detail.component.scss
@@ -10,7 +10,7 @@
 
     .detail-photo {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         gap: 20px;
 
         .left-column {
@@ -37,11 +37,17 @@
         }
 
         .right-column {
+            border-radius: 10px;
+            position: absolute;
+            right: 0;
+            top: 80px;
+
             .image-container {
 
                 margin: 0;
                 width: 100%;
                 height: 100%;
+
 
                 img {
 
@@ -90,13 +96,13 @@
 
             &:hover {
                 background-color: #000;
-                
-                a{
+
+                a {
                     color: white;
                 }
             }
         }
-        
+
     }
 
     .right-column2 {
