mise à jour popup close

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -49,6 +49,8 @@
 
       </form>
     </div>
-    <button class="close-btn" (click)="closeModal()">X</button>
+    <button class="close-btn" (click)="closeModal()"> 
+      <span class="material-icons">cancel</span>
+    </button>
   </div>
 </div>
