--- a/src/app/photo-detail/photo-detail.component.scss
+++ b/src/app/photo-detail/photo-detail.component.scss
@@ -117,8 +117,7 @@
             margin-right: 5%;
             display: flex;
             width: 81px;
-
-            max-height: 118px;
+            height: 118px;
             justify-content: center;
 
             .thumbnail {
