--- a/src/app/photo-detail/photo-detail.component.scss
+++ b/src/app/photo-detail/photo-detail.component.scss
@@ -39,7 +39,7 @@
         .right-column {
             border-radius: 10px;
             position: absolute;
-            right: 0;
+            right: 20px;
             top: 80px;
 
             .image-container {
