--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -142,6 +142,23 @@
     .dropdown {
       width: calc(40% - 20px);
 
+      .dropdown-menu {
+        max-height: 0;
+        overflow: hidden;
+        opacity: 0;
+        transform: translateY(-10px);
+        transition: max-height 0.3s ease-out, opacity 0.3s ease-out, transform 0.3s ease-out;
+      }
+      
+      .dropdown-menu.open {
+        max-height: 200px; /* Ajuste selon le contenu */
+        opacity: 1;
+        transform: translateY(0);
+      }
+      
+
+      
+
       button {
         width: 100%;
         border-radius: 5px;
@@ -164,6 +181,17 @@
       justify-content: space-between;
       width: 50%;
 
+    }
+
+    .filters_right {
+  
+      width: 49%;
+
+      .sorting-options{
+        display: flex;
+      justify-content: flex-end;
+        width: 100%;
+      }
     }
 
     .dropdown-btn {
