--- a/src/app/photo-detail/photo-detail.component.html
+++ b/src/app/photo-detail/photo-detail.component.html
@@ -1,4 +1,5 @@
 <app-header/>
+<app-light-box/>
 
 <div id="main-content">
 
@@ -69,17 +70,17 @@
           <img [src]="relatedImage.file" alt="{{ relatedImage.title }}" />
         </div>
 
-        <!-- overlay -->
-        <div class="overlay">
-          <a [href]="relatedImage.file" class="icon fullscreen-icon" target="_blank" title="Voir en plein écran">
-            <i class="fa fa-expand"></i>
-          </a>
-          <a [routerLink]="['/image', relatedImage.id]" class="icon eye-icon" title="Voir les informations">
-            <i class="fa fa-eye"></i>
-          </a>
-          <div class="photo-title">{{ relatedImage.title }}</div>
-          <div class="photo-category">{{ relatedImage.category }}</div>
-        </div>
+       <!-- Overlay avec les icônes -->
+      <div class="overlay">
+        <span class="icon fullscreen material-icons" 
+              (click)="openLightbox(relatedImage)">fullscreen</span>
+
+        <span class="icon visibility material-icons" 
+              [routerLink]="['/photo-detail', relatedImage.reference]">visibility</span>
+
+        <span class="text title">{{ relatedImage.title }}</span>
+        <span class="text category">{{ relatedImage.category }}</span>
+      </div>
       </article>
     </div>
   </section>
