--- a/src/app/light-box/light-box.component.scss
+++ b/src/app/light-box/light-box.component.scss
@@ -37,13 +37,25 @@
         border-radius: 10px;
       }
   
-      .close {
+      .close-btn {
         position: absolute;
-        top: 10px;
-        right: 10px;
-        font-size: 32px;
-        color: white;
+        top: -10px;
+        right: -10px;
+        border-radius: 20px;
+        height: 20px;
+        width: 20px;
+        border: 1px solid black;
+        background: white;
         cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: all 0.4s ease;
+        cursor: pointer;
+      
+        &:hover {
+          transform: rotate(180deg);
+        }
       }
   
       .overlay {
