--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -1,3 +1,21 @@
+@media (max-width: 480px) {
+
+  .gallery{
+
+    flex-direction: column;
+
+    .gallery-item{
+      max-width: 100% !important;
+    }
+
+  }
+
+  .load-more{
+    width: 100% !important;
+  }
+
+}
+
 /* Bannière */
 .Banner {
   width: 100vw;
@@ -143,6 +161,8 @@
       width: calc(40% - 20px);
 
       .dropdown-menu {
+        text-align: center;
+        border-radius: 10px;
         max-height: 0;
         overflow: hidden;
         opacity: 0;
@@ -221,14 +241,14 @@
       height: 500px;
       position: relative;
       overflow: hidden;
-      border-radius: 10px;
+      
 
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: center;
-
+        border-radius: 10px;
       }
 
       .overlay {
