--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,12 +31,12 @@
         <article>
           <div>
             <label for="name">Nom :</label>
-            <input type="text" name="name" />
+            <input id="name" type="text" name="name" />
           </div>
 
           <div>
-            <label for="E-mail">e-mail :</label>
-            <input type="text" name="e-mail" />
+            <label for="email">e-mail :</label>
+            <input id="email" type="text" name="e-mail" />
           </div>
 
           <div>
