--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,3 @@
-
 <header>
   <div class="logo-container">
     <a routerLink="">
@@ -15,48 +14,7 @@
     <ul>
       <li><a routerLink="" (click)="closeMenu()">Accueil</a></li>
       <li><a href="#" (click)="closeMenu()">À propos</a></li>
-      <li><a (click)="openModal(); closeMenu()">Contact</a></li>
+      <li><a (click)="openModal()">Contact</a></li>
     </ul>
   </nav>
 </header>
-
-
-<!-- popup contact -->
-
-<div class="popup-overlay" *ngIf="isModalVisible" (click)="closeModal()">
-  <div class="popup-salon" (click)="$event.stopPropagation()">
-    
-    <div class="popup-content">
-      <form (ngSubmit)="submitForm()">
-        <article>
-          <div>
-            <label for="name">Nom :</label>
-            <input id="name" type="text" name="name" />
-          </div>
-
-          <div>
-            <label for="email">e-mail :</label>
-            <input id="email" type="text" name="e-mail" />
-          </div>
-
-          <div>
-            <label for="reference">Référence :</label>
-            <input id="reference" type="text" [(ngModel)]="reference" name="reference" readonly />
-          </div>
-          <div>
-            <label for="message">Message :</label>
-            <textarea id="message" [(ngModel)]="message" name="message"></textarea>
-          </div>
-        </article>
-
-        <div class="submit">
-        <button type="submit" >Envoyer</button>
-        </div>
-
-      </form>
-    </div>
-    <button class="close-btn" (click)="closeModal()"> 
-      <span class="material-icons">cancel</span>
-    </button>
-  </div>
-</div>
