--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -102,6 +102,7 @@ header {
   position: sticky;
   top: 0;
   z-index: 100;
+  box-shadow: 0px 14px 14px rgba(0, 0, 0, 0.03);
 }
 
 .logo-container {
